--- a/package.json
+++ b/package.json
@@ -17,6 +17,14 @@
     ]
   },
   "devDependencies": {
+    "@types/lodash.throttle": "^4.1.3",
+    "@types/react": "^16.4.1",
+    "@types/react-dom": "^16.0.6",
+    "@types/react-redux": "^6.0.2",
+    "@types/react-router-dom": "^4.2.7",
+    "@types/recompose": "^0.26.1",
+    "@types/rx": "^4.1.1",
+    "@types/socket.io-client": "^1.4.32",
     "@types/webpack-env": "^1.13.6",
     "awesome-typescript-loader": "^5.2.0",
     "babel-core": "^6.26.3",
@@ -38,15 +46,9 @@
     "webpack-dev-server": "^3.1.4"
   },
   "dependencies": {
-    "@types/react": "^16.4.1",
-    "@types/react-dom": "^16.0.6",
-    "@types/react-redux": "^6.0.2",
-    "@types/react-router-dom": "^4.2.7",
-    "@types/recompose": "^0.26.1",
-    "@types/rx": "^4.1.1",
-    "@types/socket.io-client": "^1.4.32",
     "connected-react-router": "^4.3.0",
     "history": "^4.7.2",
+    "lodash.throttle": "^4.1.1",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
     "react-redux": "^5.0.7",
