--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "connected-react-router": "^4.3.0",
     "history": "^4.7.2",
     "lodash.throttle": "^4.1.1",
+    "office-ui-fabric-react": "^6.49.4",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
     "react-redux": "^5.0.7",
