add styles to dashboard and room create sections, update components structure

--- a/package.json
+++ b/package.json
@@ -33,27 +33,32 @@
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
+    "css-loader": "^1.0.0",
     "enzyme": "^3.3.0",
     "hard-source-webpack-plugin": "^0.10.1",
     "html-webpack-plugin": "^3.2.0",
     "jest": "^23.2.0",
+    "node-sass": "^4.9.3",
     "react-hot-loader": "^4.3.3",
     "react-test-renderer": "^16.4.1",
+    "sass-loader": "^7.1.0",
     "source-map-loader": "^0.2.3",
+    "style-loader": "^0.22.1",
     "typescript": "^2.9.2",
     "webpack": "^4.12.1",
     "webpack-cli": "^3.0.8",
     "webpack-dev-server": "^3.1.4"
   },
   "dependencies": {
+    "@material-ui/core": "^1.5.0",
     "connected-react-router": "^4.3.0",
     "history": "^4.7.2",
     "lodash.throttle": "^4.1.1",
-    "office-ui-fabric-react": "^6.49.4",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
+    "react-toolbox": "^2.0.0-beta.13",
     "recompose": "^0.27.1",
     "redux": "^4.0.0",
     "redux-devtools-extension": "^2.13.5",
