--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "devDependencies": {
     "@types/lodash.throttle": "^4.1.3",
     "@types/react": "^16.4.1",
+    "@types/react-color": "^2.13.6",
     "@types/react-dom": "^16.0.6",
     "@types/react-redux": "^6.0.2",
     "@types/react-router-dom": "^4.2.7",
@@ -55,6 +56,7 @@
     "history": "^4.7.2",
     "lodash.throttle": "^4.1.1",
     "react": "^16.4.1",
+    "react-color": "^2.14.1",
     "react-dom": "^16.4.1",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
