--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
   },
   "dependencies": {
     "@material-ui/core": "^1.5.0",
+    "@material-ui/lab": "^1.0.0-alpha.11",
     "connected-react-router": "^4.3.0",
     "history": "^4.7.2",
     "lodash.throttle": "^4.1.1",
@@ -60,7 +61,6 @@
     "react-dom": "^16.4.1",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
-    "react-toolbox": "^2.0.0-beta.13",
     "recompose": "^0.27.1",
     "redux": "^4.0.0",
     "redux-devtools-extension": "^2.13.5",
