--- a/package.json
+++ b/package.json
@@ -17,56 +17,57 @@
     ]
   },
   "devDependencies": {
-    "@types/lodash.throttle": "^4.1.3",
-    "@types/react": "^16.4.1",
+    "@types/lodash.throttle": "^4.1.4",
+    "@types/react": "^16.7.17",
     "@types/react-color": "^2.13.6",
-    "@types/react-dom": "^16.0.6",
-    "@types/react-redux": "^6.0.2",
-    "@types/react-router-dom": "^4.2.7",
-    "@types/recompose": "^0.26.1",
+    "@types/react-dom": "^16.0.11",
+    "@types/react-redux": "^6.0.11",
+    "@types/react-router-dom": "^4.3.1",
+    "@types/recompose": "^0.30.2",
     "@types/rx": "^4.1.1",
     "@types/socket.io-client": "^1.4.32",
     "@types/webpack-env": "^1.13.6",
-    "awesome-typescript-loader": "^5.2.0",
+    "awesome-typescript-loader": "^5.2.1",
     "babel-core": "^6.26.3",
-    "babel-jest": "^23.2.0",
-    "babel-loader": "^7.1.4",
+    "babel-jest": "^23.6.0",
+    "babel-loader": "^7.1.5",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
-    "css-loader": "^1.0.0",
-    "enzyme": "^3.3.0",
-    "hard-source-webpack-plugin": "^0.10.1",
+    "css-loader": "^1.0.1",
+    "enzyme": "^3.8.0",
+    "hard-source-webpack-plugin": "^0.10.2",
     "html-webpack-plugin": "^3.2.0",
-    "jest": "^23.2.0",
-    "node-sass": "^4.9.3",
-    "react-hot-loader": "^4.3.3",
-    "react-test-renderer": "^16.4.1",
+    "jest": "^23.6.0",
+    "node-sass": "^4.11.0",
+    "react-hot-loader": "^4.6.0",
+    "react-test-renderer": "^16.6.3",
     "sass-loader": "^7.1.0",
-    "source-map-loader": "^0.2.3",
+    "source-map-loader": "^0.2.4",
     "style-loader": "^0.22.1",
+    "tslint-config-airbnb": "^5.11.1",
     "typescript": "^2.9.2",
-    "webpack": "^4.12.1",
-    "webpack-cli": "^3.0.8",
-    "webpack-dev-server": "^3.1.4"
+    "webpack": "^4.27.1",
+    "webpack-cli": "^3.1.2",
+    "webpack-dev-server": "^3.1.10"
   },
   "dependencies": {
-    "@material-ui/core": "^1.5.0",
-    "@material-ui/lab": "^1.0.0-alpha.11",
-    "connected-react-router": "^4.3.0",
+    "@material-ui/core": "^1.5.1",
+    "@material-ui/lab": "^1.0.0-alpha.12",
+    "connected-react-router": "^4.5.0",
     "history": "^4.7.2",
     "lodash.throttle": "^4.1.1",
-    "react": "^16.4.1",
+    "react": "^16.6.3",
     "react-color": "^2.14.1",
-    "react-dom": "^16.4.1",
-    "react-redux": "^5.0.7",
+    "react-dom": "^16.6.3",
+    "react-redux": "^5.1.1",
     "react-router-dom": "^4.3.1",
-    "recompose": "^0.27.1",
-    "redux": "^4.0.0",
-    "redux-devtools-extension": "^2.13.5",
+    "recompose": "^0.30.0",
+    "redux": "^4.0.1",
+    "redux-devtools-extension": "^2.13.7",
     "redux-observable": "^1.0.0",
-    "rxjs": "^6.2.1",
-    "socket.io-client": "^2.1.1",
+    "rxjs": "^6.3.3",
+    "socket.io-client": "^2.2.0",
     "whatwg-fetch": "^2.0.4"
   }
 }
