--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "trailingComma": "all"
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.119",
     "@types/lodash.throttle": "^4.1.4",
     "@types/react": "^16.7.17",
     "@types/react-color": "^2.13.6",
@@ -66,6 +67,7 @@
     "connected-react-router": "^6.0.0",
     "formik": "^1.4.1",
     "history": "^4.7.2",
+    "lodash": "^4.17.11",
     "lodash.throttle": "^4.1.1",
     "react": "^16.6.3",
     "react-color": "^2.14.1",
