--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "devDependencies": {
     "@types/lodash": "^4.14.119",
     "@types/lodash.throttle": "^4.1.4",
+    "@types/query-string": "^6.2.0",
     "@types/react": "^16.7.17",
     "@types/react-color": "^2.13.6",
     "@types/react-dom": "^16.0.11",
@@ -69,6 +70,7 @@
     "history": "^4.7.2",
     "lodash": "^4.17.11",
     "lodash.throttle": "^4.1.1",
+    "query-string": "^6.2.0",
     "react": "^16.6.3",
     "react-color": "^2.14.1",
     "react-dom": "^16.6.3",
