--- a/package.json
+++ b/package.json
@@ -64,7 +64,7 @@
   "dependencies": {
     "@material-ui/core": "^3.9.0",
     "@material-ui/lab": "^3.0.0-alpha.28",
-    "connected-react-router": "^6.0.0",
+    "connected-react-router": "^6.3.1",
     "formik": "^1.4.1",
     "history": "^4.7.2",
     "lodash": "^4.17.11",
@@ -73,7 +73,7 @@
     "react-color": "^2.14.1",
     "react-dom": "^16.8.2",
     "react-redux": "^6.0.1",
-    "react-router-dom": "^4.3.1",
+    "react-router-dom": "^4.4.0-beta.7",
     "recompose": "^0.30.0",
     "redux": "^4.0.1",
     "redux-devtools-extension": "^2.13.7",
