--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "redux": "^4.0.1",
     "redux-devtools-extension": "^2.13.7",
     "redux-observable": "^1.0.0",
+    "reselect": "^4.0.0",
     "rxjs": "^6.3.3",
     "socket.io-client": "^2.2.0",
     "whatwg-fetch": "^3.0.0"
