--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@types/recompose": "^0.30.2",
     "@types/rx": "^4.1.1",
     "@types/socket.io-client": "^1.4.32",
+    "@types/styled-components": "^4.1.12",
     "@types/webpack-env": "^1.13.6",
     "babel-core": "^6.26.3",
     "babel-jest": "^23.6.0",
@@ -81,6 +82,7 @@
     "reselect": "^4.0.0",
     "rxjs": "^6.3.3",
     "socket.io-client": "^2.2.0",
+    "styled-components": "^4.1.3",
     "whatwg-fetch": "^3.0.0"
   }
 }
