--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "lodash": "^4.17.11",
     "query-string": "^6.2.0",
     "react": "^16.8.2",
+    "react-alice-carousel": "^1.13.3",
     "react-color": "^2.14.1",
     "react-dom": "^16.8.2",
     "react-redux": "^6.0.1",
