--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "@material-ui/core": "^3.9.0",
     "@material-ui/lab": "^3.0.0-alpha.28",
     "connected-react-router": "^6.3.1",
+    "emoji-picker-react": "^2.1.1",
     "formik": "^1.4.1",
     "history": "^4.7.2",
     "lodash": "^4.17.11",
