--- a/package.json
+++ b/package.json
@@ -11,9 +11,14 @@
   "license": "ISC",
   "babel": {
     "presets": [
-      "env",
-      "react",
-      "stage-2"
+      "@babel/preset-env",
+      "@babel/typescript",
+      "@babel/preset-react"
+    ],
+    "plugins": [
+      [
+        "@babel/transform-runtime"
+      ]
     ]
   },
   "prettier": {
@@ -21,6 +26,11 @@
     "trailingComma": "all"
   },
   "devDependencies": {
+    "@babel/core": "^7.4.3",
+    "@babel/plugin-transform-runtime": "^7.4.3",
+    "@babel/preset-env": "^7.4.3",
+    "@babel/preset-react": "^7.0.0",
+    "@babel/preset-typescript": "^7.3.3",
     "@types/lodash": "^4.14.119",
     "@types/query-string": "^6.2.0",
     "@types/react": "^16.8.4",
@@ -33,25 +43,16 @@
     "@types/socket.io-client": "^1.4.32",
     "@types/styled-components": "^4.1.12",
     "@types/webpack-env": "^1.13.6",
-    "babel-core": "^6.26.3",
-    "babel-jest": "^23.6.0",
-    "babel-loader": "^8.0.4",
-    "babel-preset-env": "^1.7.0",
-    "babel-preset-react": "^6.24.1",
-    "babel-preset-stage-2": "^6.24.1",
+    "babel-loader": "^8.0.5",
     "css-loader": "^1.0.1",
     "enzyme": "^3.8.0",
-    "hard-source-webpack-plugin": "^0.13.1",
     "html-webpack-plugin": "^3.2.0",
     "jest": "^23.6.0",
-    "node-sass": "^4.11.0",
     "prettier": "^1.15.3",
     "react-hot-loader": "^4.6.0",
     "react-test-renderer": "^16.6.3",
-    "sass-loader": "^7.1.0",
     "source-map-loader": "^0.2.4",
     "style-loader": "^0.22.1",
-    "ts-loader": "^5.3.1",
     "tslint": "^5.11.0",
     "tslint-config-airbnb": "^5.11.1",
     "tslint-config-prettier": "^1.17.0",
@@ -63,6 +64,7 @@
     "webpack-dev-server": "^3.1.10"
   },
   "dependencies": {
+    "@babel/runtime": "^7.4.3",
     "@material-ui/core": "^3.9.0",
     "@material-ui/lab": "^3.0.0-alpha.28",
     "connected-react-router": "^6.3.1",
