--- a/package.json
+++ b/package.json
@@ -4,89 +4,79 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "webpack-dev-server --config ./webpack.config.js --mode development --history-api-fallback",
-    "test": "jest"
+    "start": "webpack-dev-server --config ./webpack.config.dev.js --mode development --history-api-fallback",
+    "test": "jest",
+    "build": "webpack --config ./webpack.config.prod.js --mode production"
   },
   "author": "",
   "license": "ISC",
-  "babel": {
-    "presets": [
-      "@babel/preset-env",
-      "@babel/typescript",
-      "@babel/preset-react"
-    ],
-    "plugins": [
-      [
-        "@babel/transform-runtime"
-      ]
-    ]
-  },
-  "prettier": {
-    "singleQuote": true,
-    "trailingComma": "all"
-  },
   "devDependencies": {
-    "@babel/core": "^7.4.3",
-    "@babel/plugin-transform-runtime": "^7.4.3",
-    "@babel/preset-env": "^7.4.3",
-    "@babel/preset-react": "^7.0.0",
-    "@babel/preset-typescript": "^7.3.3",
-    "@types/lodash": "^4.14.119",
-    "@types/query-string": "^6.2.0",
-    "@types/react": "^16.8.4",
-    "@types/react-color": "^2.13.6",
-    "@types/react-dom": "^16.8.2",
-    "@types/react-redux": "^7.0.1",
-    "@types/react-router-dom": "^4.3.1",
-    "@types/recompose": "^0.30.2",
+    "@babel/core": "^7.7.2",
+    "@babel/plugin-transform-runtime": "^7.6.2",
+    "@babel/preset-env": "^7.7.1",
+    "@babel/preset-react": "^7.7.0",
+    "@babel/preset-typescript": "^7.7.2",
+    "@types/lodash": "^4.14.149",
+    "@types/query-string": "^6.3.0",
+    "@types/react": "^16.9.11",
+    "@types/react-color": "^2.17.2",
+    "@types/react-dom": "^16.9.4",
+    "@types/react-redux": "^7.1.5",
+    "@types/react-router-dom": "^4.3.5",
+    "@types/recompose": "^0.30.7",
     "@types/rx": "^4.1.1",
     "@types/socket.io-client": "^1.4.32",
-    "@types/styled-components": "^4.1.12",
-    "@types/webpack-env": "^1.13.6",
-    "babel-loader": "^8.0.5",
+    "@types/styled-components": "^4.4.0",
+    "@types/webpack-env": "^1.14.1",
+    "babel-loader": "^8.0.6",
+    "clean-css": "^4.2.1",
     "css-loader": "^1.0.1",
-    "enzyme": "^3.8.0",
+    "enzyme": "^3.10.0",
+    "html-webpack-inline-source-plugin": "0.0.10",
     "html-webpack-plugin": "^3.2.0",
-    "jest": "^23.6.0",
-    "prettier": "^1.15.3",
-    "react-hot-loader": "^4.6.0",
-    "react-test-renderer": "^16.6.3",
+    "jest": "^25.0.0",
+    "mini-css-extract-plugin": "^0.8.0",
+    "optimize-css-assets-webpack-plugin": "^5.0.3",
+    "prettier": "^1.19.1",
+    "react-hot-loader": "^4.12.18",
+    "react-test-renderer": "^16.12.0",
     "source-map-loader": "^0.2.4",
-    "style-loader": "^0.22.1",
-    "tslint": "^5.11.0",
-    "tslint-config-airbnb": "^5.11.1",
-    "tslint-config-prettier": "^1.17.0",
+    "terser-webpack-plugin": "^2.2.1",
+    "tslint": "^5.20.1",
+    "tslint-config-airbnb": "^5.11.2",
+    "tslint-config-prettier": "^1.18.0",
     "tslint-plugin-prettier": "^2.0.1",
     "tslint-react": "^3.6.0",
-    "typescript": "^3.3.0-dev.20181214",
-    "webpack": "^4.27.1",
-    "webpack-cli": "^3.1.2",
-    "webpack-dev-server": "^3.1.10"
+    "typescript": "^3.7.2",
+    "webpack": "^4.41.2",
+    "webpack-clean": "^1.2.3",
+    "webpack-cli": "^3.3.10",
+    "webpack-dev-server": "^3.9.0"
   },
   "dependencies": {
-    "@babel/runtime": "^7.4.3",
-    "@material-ui/core": "^3.9.0",
-    "@material-ui/lab": "^3.0.0-alpha.28",
+    "@babel/runtime": "^7.7.2",
+    "@material-ui/core": "^3.9.3",
+    "@material-ui/lab": "^3.0.0-alpha.30",
     "connected-react-router": "^5.0.1",
     "emoji-picker-react": "^2.1.1",
-    "formik": "^1.4.1",
-    "history": "^4.7.2",
-    "lodash": "^4.17.11",
-    "query-string": "^6.2.0",
-    "react": "^16.8.2",
-    "react-alice-carousel": "^1.13.3",
-    "react-color": "^2.14.1",
-    "react-dom": "^16.8.2",
-    "react-redux": "^5.1.1",
-    "react-router-dom": "^4.4.0-beta.7",
+    "formik": "^1.5.8",
+    "history": "^4.10.1",
+    "lodash": "^4.17.15",
+    "query-string": "^6.9.0",
+    "react": "^16.12.0",
+    "react-alice-carousel": "^1.16.0",
+    "react-color": "^2.17.3",
+    "react-dom": "^16.12.0",
+    "react-redux": "^5.1.2",
+    "react-router-dom": "^4.4.0-beta.8",
     "recompose": "^0.30.0",
-    "redux": "^4.0.1",
-    "redux-devtools-extension": "^2.13.7",
-    "redux-observable": "^1.0.0",
+    "redux": "^4.0.4",
+    "redux-devtools-extension": "^2.13.8",
+    "redux-observable": "^1.2.0",
     "reselect": "^4.0.0",
-    "rxjs": "^6.3.3",
-    "socket.io-client": "^2.2.0",
-    "styled-components": "^4.1.3",
+    "rxjs": "^6.5.3",
+    "socket.io-client": "^2.3.0",
+    "styled-components": "^4.4.1",
     "whatwg-fetch": "^3.0.0"
   }
 }
