--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-hot-loader": "^4.12.18",
     "react-test-renderer": "^16.12.0",
     "source-map-loader": "^0.2.4",
+    "style-loader": "^1.0.0",
     "terser-webpack-plugin": "^2.2.1",
     "tslint": "^5.20.1",
     "tslint-config-airbnb": "^5.11.2",
