--- a/package.json
+++ b/package.json
@@ -58,7 +58,7 @@
     "@babel/runtime": "^7.7.2",
     "@material-ui/core": "^3.9.3",
     "@material-ui/lab": "^3.0.0-alpha.30",
-    "connected-react-router": "^5.0.1",
+    "connected-react-router": "^6.6.1",
     "emoji-picker-react": "^2.1.1",
     "formik": "^1.5.8",
     "history": "^4.10.1",
@@ -68,8 +68,8 @@
     "react-alice-carousel": "^1.16.0",
     "react-color": "^2.17.3",
     "react-dom": "^16.12.0",
-    "react-redux": "^5.1.2",
-    "react-router-dom": "^4.4.0-beta.8",
+    "react-redux": "^7.1.3",
+    "react-router-dom": "^5.1.2",
     "recompose": "^0.30.0",
     "redux": "^4.0.4",
     "redux-devtools-extension": "^2.13.8",
